Fix: EEVEE: Broken object attributes on volume, pointcloud and curves

This was a simple oversight.

Also adding a version of `extract_object_attributes` for
single material object.

Fixes #123997